--- a/index.html
+++ b/index.html
@@ -930,45 +930,215 @@ function startFlappy(){
 
 window.openFlappy = ()=> requireProfileThen(openFlappy);
 
-/* ===== HEXAGON (survival) ===== */
-let HX=null;
-function openHex(){ closeOverlay('playOverlay'); openOverlay('hexModal'); if(!HX) startHex(); }
-function startHex(){
-  const canvas=document.getElementById('hexCanvas'), ctx=canvas.getContext('2d');
-  function size(){ const p=canvas.parentElement.getBoundingClientRect(); canvas.width=p.width; canvas.height=p.height; } size(); new ResizeObserver(size).observe(canvas.parentElement);
-  HX={ctx, w:canvas.width, h:canvas.height, a:0, speed:2.4, playerAng:0, running:false, raf:0, paused:false, t0:0, time:0, chads:0};
-  const key=(e,down)=>{ if(['ArrowLeft','a','A','ArrowRight','d','D'].includes(e.key)){ e.preventDefault(); if(down){ if(e.key==='ArrowLeft'||e.key==='a'||e.key==='A') HX.dir=-1; else HX.dir=1; } else { HX.dir=0; }}};
-  window.addEventListener('keydown',e=>key(e,true),{passive:false}); window.addEventListener('keyup',e=>key(e,false),{passive:false});
-  document.getElementById('hxStart').onclick=()=>{ HX.time=0; HX.chads=0; HX.running=true; HX.t0=performance.now(); loop(HX.t0); };
-  document.getElementById('hxPause').onclick=()=>{ HX.paused=!HX.paused; document.getElementById('hxPause').textContent=HX.paused?'Resume':'Pause'; if(!HX.paused&&HX.running) loop(performance.now()); };
-  document.getElementById('hxQuit').onclick=()=>{ if(HX?.chads>0){ state.chads+=BigInt(HX.chads); refreshUI(); saveStateLocal(state); showToast(`<span class="accent">+${HX.chads}</span> chads added to balance.`); } cancelAnimationFrame(HX.raf); HX=null; closeOverlay('hexModal'); };
+/* ===== VORTEX HEX (9:16) ===== */
+let HX = null;
 
-  function update(dt){ HX.a += HX.speed*dt; if(HX.dir) HX.playerAng += HX.dir*3.2*dt; HX.time += dt; HX.chads = Math.floor(HX.time); }
-  function draw(){
-    const {w,h}=canvas; ctx.clearRect(0,0,w,h);
-    const R=Math.min(w,h)*0.32, cx=w/2, cy=h/2;
-    ctx.fillStyle='#0a0f14'; ctx.fillRect(0,0,w,h);
-    // walls
-    ctx.save(); ctx.translate(cx,cy); ctx.rotate(HX.a*0.6);
-    for(let i=0;i<6;i++){ const ang=i*Math.PI/3; const d= (Math.sin(HX.a*1.3+i)*0.5+0.5)*R*0.6;
-      ctx.beginPath(); ctx.moveTo(Math.cos(ang)*(R+d), Math.sin(ang)*(R+d)); ctx.lineTo(Math.cos(ang+0.7)*(R+d), Math.sin(ang+0.7)*(R+d)); ctx.lineTo(Math.cos(ang+0.7)*(R+1.6*d), Math.sin(ang+0.7)*(R+1.6*d)); ctx.lineTo(Math.cos(ang)*(R+1.6*d), Math.sin(ang)*(R+1.6*d));
-      ctx.closePath(); ctx.fillStyle='rgba(74,163,255,0.18)'; ctx.fill();
-    }
-    // player
-    ctx.rotate(HX.playerAng);
-    ctx.fillStyle='#ffd86b'; ctx.beginPath(); ctx.arc(R+18,0,8,0,Math.PI*2); ctx.fill();
-    ctx.restore();
-    // HUD
-    document.getElementById('hxTime').textContent = HX.time.toFixed(1) + 's';
-    document.getElementById('hxEarned').textContent = HX.chads;
-  }
-  function loop(ts){ if(!HX||!HX.running) return; const prev=HX.prev||ts; const dt=Math.min(0.03,(ts-prev)/1000); HX.prev=ts; if(!HX.paused){ update(dt); draw(); } HX.raf=requestAnimationFrame(loop); }
+function openHex(){
+  closeOverlay('playOverlay');
+  openOverlay('hexModal');
+  if (!HX) startHex();
 }
+
+function startHex(){
+  if (HX?.loopId) cancelAnimationFrame(HX.loopId);
+
+  const canvas = document.getElementById('hxCanvas');
+  const ctx = canvas.getContext('2d');
+  const wrap = canvas.parentElement;
+
+  function size(){
+    const r = wrap.getBoundingClientRect();
+    canvas.width = Math.max(240, Math.floor(r.width));
+    canvas.height = Math.max(320, Math.floor(r.height));
+  }
+  size();
+
+  const ro = new ResizeObserver(()=>{
+    if (document.getElementById('hexModal').classList.contains('show')) size();
+  });
+  ro.observe(wrap);
+
+  HX = {
+    canvas, ctx, wrap, ro,
+    loopId:null, lastTs: performance.now(),
+    paused:false, dead:false, t:0,
+    dir: 0,
+    score:0, sessionChads:0
+  };
+
+  const cx = ()=> canvas.width/2;
+  const cy = ()=> canvas.height/2;
+  const baseR = ()=> Math.min(canvas.width, canvas.height)*0.22;
+  let speed = 1.0;
+  let ringTimer = 0, ringEvery = 1.2;
+
+  const player = { angle: 0 }; // radians
+  const rings = []; // each ring is array of gaps [startAngle,endAngle], with radius and thickness
+
+  function addRing(){
+    const gaps = [];
+    const gapCount = 1 + Math.floor(Math.random()*2);
+    for(let i=0;i<gapCount;i++){
+      const a = Math.random()*Math.PI*2;
+      const span = (Math.PI/6) + Math.random()* (Math.PI/5);
+      gaps.push([a, a+span]);
+    }
+    rings.push({ r: baseR()+260, thick: 20, gaps });
+  }
+
+  function inGap(angle, gaps){
+    // normalize to [0, 2π)
+    const TWO = Math.PI*2;
+    const a = ((angle%TWO)+TWO)%TWO;
+    for (const [s,e] of gaps){
+      const sN = ((s%TWO)+TWO)%TWO;
+      const eN = ((e%TWO)+TWO)%TWO;
+      if (sN <= eN) { if (a>=sN && a<=eN) return true; }
+      else { if (a>=sN || a<=eN) return true; }
+    }
+    return false;
+  }
+
+  function update(dt){
+    HX.t += dt;
+    player.angle += HX.dir * dt * 3.0;
+
+    // spawn/move rings
+    ringTimer += dt;
+    if (ringTimer >= ringEvery){ ringTimer=0; addRing(); }
+
+    for (const ring of rings) ring.r -= (120 + speed*40)*dt;
+
+    // collision/check pass
+    const pr = baseR();
+    for (let i=rings.length-1; i>=0; i--){
+      const ring = rings[i];
+      if (Math.abs(ring.r - pr) < ring.thick){
+        // at player radius — must be in a gap
+        if (!inGap(player.angle, ring.gaps)){
+          HX.dead = true; break;
+        } else {
+          // success -> score & chads
+          HX.score += 1; HX.sessionChads += 6; updateHeader();
+        }
+      }
+      if (ring.r < pr - ring.thick - 20) rings.splice(i,1);
+    }
+    speed += dt*0.06;
+  }
+
+  function draw(){
+    const {ctx} = HX;
+    ctx.clearRect(0,0,canvas.width,canvas.height);
+    // bg
+    const g = ctx.createLinearGradient(0,0,0,canvas.height);
+    g.addColorStop(0,'#0a0f16'); g.addColorStop(1,'#070a0e');
+    ctx.fillStyle = g; ctx.fillRect(0,0,canvas.width,canvas.height);
+
+    // center hex trail
+    ctx.save(); ctx.translate(cx(), cy());
+    ctx.rotate(player.angle);
+    ctx.strokeStyle = '#9ed2ff';
+    ctx.lineWidth = 4;
+    ctx.beginPath();
+    ctx.moveTo(baseR(),0);
+    ctx.lineTo(baseR()+12,0);
+    ctx.stroke();
+    ctx.restore();
+
+    // rings
+    for (const ring of rings){
+      // draw full ring
+      ctx.strokeStyle = '#2fc78c';
+      ctx.lineWidth = ring.thick;
+      ctx.beginPath();
+      ctx.arc(cx(),cy(), ring.r, 0, Math.PI*2);
+      ctx.stroke();
+
+      // carve gaps (draw dark over them)
+      ctx.strokeStyle = '#0a0f16';
+      ctx.lineWidth = ring.thick+2;
+      for (const [s,e] of ring.gaps){
+        ctx.beginPath();
+        ctx.arc(cx(),cy(), ring.r, s, e);
+        ctx.stroke();
+      }
+    }
+  }
+
+  function frame(ts){
+    if (!HX) return;
+    const dt = Math.min(0.035, (ts - HX.lastTs)/1000);
+    HX.lastTs = ts;
+    if (!HX.paused && !HX.dead){ update(dt); draw(); }
+    if (HX.dead){
+      draw();
+      fancyAlert(`You hit the wall! Score ${HX.score}. Press Start to try again.`);
+      return;
+    }
+    HX.loopId = requestAnimationFrame(frame);
+  }
+
+  // Controls
+  function keydown(e){
+    if (e.key==='ArrowLeft' || e.key==='a' || e.key==='A') { e.preventDefault(); HX.dir = -1; }
+    if (e.key==='ArrowRight'|| e.key==='d' || e.key==='D') { e.preventDefault(); HX.dir = +1; }
+    if (e.key===' ') { e.preventDefault(); HX.dir = 0; }
+  }
+  function keyup(e){
+    if (['ArrowLeft','a','A','ArrowRight','d','D'].includes(e.key)) HX.dir = 0;
+  }
+  window.addEventListener('keydown', keydown, {passive:false});
+  window.addEventListener('keyup', keyup, {passive:false});
+  canvas.addEventListener('pointerdown', (e)=>{ e.preventDefault(); const mid = canvas.getBoundingClientRect().left + canvas.width/2; HX.dir = (e.clientX < mid) ? -1 : +1; }, {passive:false});
+  canvas.addEventListener('pointerup', ()=>{ HX.dir = 0; }, {passive:true});
+
+  const startBtn = document.getElementById('hxStart');
+  const pauseBtn = document.getElementById('hxPause');
+  const quitBtn  = document.getElementById('hxQuit');
+
+  startBtn.onclick = ()=>{
+    HX.dead=false; HX.paused=false; HX.t=0; HX.score=0; HX.sessionChads=0; HX.dir=0;
+    speed=1.0; ringTimer=0; ringEvery=1.2; rings.length=0; player.angle=0;
+    updateHeader();
+    if (HX.loopId) cancelAnimationFrame(HX.loopId);
+    HX.lastTs = performance.now();
+    HX.loopId = requestAnimationFrame(frame);
+  };
+  pauseBtn.onclick = ()=>{
+    HX.paused = !HX.paused;
+    pauseBtn.textContent = HX.paused ? 'Resume' : 'Pause';
+    if (!HX.paused){
+      HX.lastTs = performance.now();
+      HX.loopId = requestAnimationFrame(frame);
+    }
+  };
+  quitBtn.onclick = ()=>{
+    if (HX?.ro) { try{ HX.ro.disconnect(); }catch{} }
+    if (HX?.loopId) cancelAnimationFrame(HX.loopId);
+    if (HX?.sessionChads>0){
+      state.chads += BigInt(HX.sessionChads); refreshUI(); saveStateLocal(state);
+      showToast(`<span class="accent">+${HX.sessionChads}</span> chads added to balance.`);
+    }
+    HX = null;
+    closeOverlay('hexModal');
+  };
+
+  function updateHeader(){
+    const s=document.getElementById('hxScore'); if(s) s.textContent = HX.score;
+    const e=document.getElementById('hxEarned'); if(e) e.textContent = HX.sessionChads;
+  }
+
+  // Auto-start
+  startBtn.click();
+}
+
+window.openHex = ()=> requireProfileThen(openHex);
 
 /* ===== VERTICAL JUMPER (compact, same physics) ===== */
 let VJ=null;
 function openVertical(){ closeOverlay('playOverlay'); openOverlay('vjModal'); if(!VJ) newVJGame(); }
-document.getElementById('vjStart').addEventListener('click', newVJGame);
+document.getElementById('vjStart').onclick = ()=>{ newVJGame(); };
 document.getElementById('vjPause').addEventListener('click', ()=>{ if(!VJ) return; VJ.paused=!VJ.paused; document.getElementById('vjPause').textContent = VJ.paused?'Resume':'Pause'; });
 document.getElementById('vjQuit').addEventListener('click', quitVJ);
 
@@ -1027,8 +1197,16 @@ function newVJGame(){
   VJ.lastTs = performance.now(); document.getElementById('vjPause').textContent='Pause'; VJ.loopId = requestAnimationFrame(frame);
   VJ.cleanup = ()=>{ cancelAnimationFrame(VJ.loopId); try{ ro.disconnect(); }catch{} window.removeEventListener('keydown', kd); window.removeEventListener('keyup', ku); };
 }
-function quitVJ(){ if (VJ?.sessionChads>0){ state.chads += BigInt(VJ.sessionChads); refreshUI(); saveStateLocal(state); showToast(`<span class="accent">+${VJ.sessionChads}</span> chads added to your balance.`); }
-  if (VJ?.cleanup) VJ.cleanup(); VJ=null; closeOverlay('vjModal'); }
+function quitVJ(){
+  if (VJ?.sessionChads>0){
+    state.chads += BigInt(VJ.sessionChads);
+    refreshUI(); saveStateLocal(state);
+    showToast(`<span class="accent">+${VJ.sessionChads}</span> chads added to your balance.`);
+  }
+  if (VJ?.cleanup) VJ.cleanup();
+  VJ = null;
+  closeOverlay('vjModal');
+}
 
 /* ===== SHOP ===== */
 const SHOP=[ {id:'card1', name:'Bronze Drip', delta:1n, cost:50n}, {id:'card2', name:'Silver Drip', delta:5n, cost:200n}, {id:'card3', name:'Gold Drip', delta:20n, cost:800n} ];
