--- a/index.html
+++ b/index.html
@@ -823,80 +823,247 @@ window.openSnake = ()=>{ closeOverlay('playOverlay'); openOverlay('snakeModal');
 })();
 
 /* ===== Vortex Hex (working collider) ===== */
+/* ===== Vortex Hex (9:16, crisp scaling, robust collider) ===== */
 (function(){
-  const cvs=document.getElementById('vortexCanvas'); const ctx=cvs.getContext?.('2d'); if(!cvs||!ctx) return;
-  let W=0,H=0, unit=1, running=false, paused=false, loop=null, t=0, score=0, earned=0;
-  const player={ang:0,rad:0.28,spd:2.9};
-  let arcs=[];
-  // --- ANGLE HELPERS + COLLISION ---
-const TAU = Math.PI * 2;
-function norm(a){ return (a % TAU + TAU) % TAU; }
-function angDelta(a,b){
-  let d = a - b;
-  d = (d + Math.PI) % TAU;
-  if (d < 0) d += TAU;
-  return d - Math.PI;
-}
+  // ---- Grab elements (bail out if modal not present) ----
+  const cvs = document.getElementById('vortexCanvas');
+  const startBtn = document.getElementById('vortexStart');
+  const pauseBtn = document.getElementById('vortexPause');
+  const quitBtn  = document.getElementById('vortexQuit');
+  const scoreEl  = document.getElementById('vortexScore');
+  const earnEl   = document.getElementById('vortexEarned');
+  if(!cvs || !startBtn || !pauseBtn || !quitBtn || !scoreEl || !earnEl) return;
 
-// Your arcs use: {rad, thick, len, dir, w, off}
-// Convert that to center+span on the fly for robust checks.
-const EPS = 1.5;       // small cushion against false hits
-const PLAYER_PAD = 2.0;
+  const ctx = cvs.getContext('2d');
 
-function arcHitsPlayerCurrentArc(a, playerRadius, playerAngle){
-  const center = a.off + a.len * 0.5;          // arc center angle
-  const span   = a.len;                         // arc angular width
-
-  // radial band check (around ring center radius)
-  const ringCenter = a.rad + a.thick * 0.5;
-  const radialOk = Math.abs(playerRadius - ringCenter) <= (a.thick * 0.5 + EPS + PLAYER_PAD);
-  if (!radialOk) return false;
-
-  // angular check using shortest signed angle
-  const d = Math.abs(angDelta(norm(playerAngle), norm(center)));
-  return d <= (span * 0.5);
-}
-
-  function size(){ const r=cvs.getBoundingClientRect(); cvs.width=r.width; cvs.height=r.height; W=cvs.width; H=cvs.height; unit=H/800; }
-  function reset(){ size(); t=0; score=0; earned=0; arcs=[]; document.getElementById('vortexScore').textContent=score; document.getElementById('vortexEarned').textContent=earned; }
-  function addArc(){ const len=(0.8+Math.random()*1.2); const rad = 0.20 + Math.random()*0.70; const thick=0.018 + Math.random()*0.028; const dir=Math.random()<0.5?-1:1; const w= (0.8+Math.random()*1.7); const off=Math.random()*Math.PI*2;
-    arcs.push({rad, thick, len, dir, w, off}); }
-  function update(dt){
-    t+=dt; if(arcs.length<7) addArc();
-    // move arcs & collision
-    for(const a of arcs){ a.off += a.dir*a.w*dt; const r = a.rad, R=r+ a.thick; const pa = player.ang%(Math.PI*2);
-      if (arcHitsPlayerCurrentArc(a, player.rad, pa)) { gameOver(); return; }
-
-    }
-    score += dt*60*0.5|0; document.getElementById('vortexScore').textContent=score;
+  // ---- HiDPI scaling helpers (draw in CSS pixels) ----
+  function fitCanvasToBox(){
+    const rect = cvs.getBoundingClientRect();
+    const dpr  = Math.max(1, window.devicePixelRatio || 1);
+    cvs.width  = Math.round(rect.width  * dpr);
+    cvs.height = Math.round(rect.height * dpr);
+    ctx.setTransform(dpr,0,0,dpr,0,0); // draw using CSS pixel units
   }
+
+  // ---- Game state ----
+  const TAU = Math.PI*2;
+  let running=false, paused=false, loopId=null, lastTs=0;
+  let W=0, H=0, unit=1, cx=0, cy=0, baseR=0;
+
+  const player = { // orbiter
+    theta: 0,            // radians
+    r: 0,                // radius (px)
+    vtheta: 0,           // angular velocity
+    speed: 2.8,          // angular speed (rad/s)
+    rad: 8               // drawing radius (px)
+  };
+
+  // each arc: { r, thick, a, span, w, dir }
+  let arcs = [];
+  let score=0, earned=0, t=0;
+
+  // ---- Angle helpers (robust across 0/360) ----
+  function norm(a){ return (a%TAU + TAU) % TAU; }
+  function angDelta(a,b){ let d=a-b; d=(d+Math.PI)%TAU; if(d<0) d+=TAU; return d-Math.PI; }
+
+  // ---- Collision: player vs arc (center+span model) ----
+  const EPS=1.5, PLAYER_PAD=2;
+  function arcHitsPlayer(arc, pRadius, pTheta){
+    const radialOk = Math.abs(pRadius - arc.r) <= (arc.thick*0.5 + EPS + PLAYER_PAD);
+    if(!radialOk) return false;
+    const d = Math.abs(angDelta(norm(pTheta), norm(arc.a)));
+    return d <= (arc.span*0.5);
+  }
+
+  // ---- Spawning ----
+  function makeArc(r){
+    return {
+      r,
+      thick: 16*unit,
+      a: Math.random()*TAU,
+      span: (Math.PI/3) * (0.65 + Math.random()*0.4), // ~60..84 deg
+      w: (0.6 + Math.random()*0.8), // rad/s
+      dir: Math.random() < 0.5 ? -1 : 1
+    };
+  }
+
+  function reset(){
+    fitCanvasToBox();
+    W = cvs.width  / (window.devicePixelRatio||1);
+    H = cvs.height / (window.devicePixelRatio||1);
+    cx = W/2; cy = H/2;
+    unit = H/800;                      // world scaler for 9:16 shell
+    baseR = Math.min(W,H)*0.32;        // comfortable ring radius
+
+    player.theta = 0;
+    player.vtheta = 0;
+    player.r = baseR;
+    player.rad = Math.max(7, 10*unit);
+
+    arcs.length = 0;
+    // three rings, different radii & speeds
+    arcs.push(makeArc(baseR - 70*unit));
+    arcs.push(makeArc(baseR));
+    arcs.push(makeArc(baseR + 70*unit));
+
+    score = 0; earned = 0; t = 0;
+    updateHeader();
+    draw(); // initial frame
+  }
+
+  function updateHeader(){
+    scoreEl.textContent = Math.floor(score);
+    earnEl.textContent  = Math.floor(earned);
+  }
+
+  // ---- Input (keyboard + pointer halves) ----
+  const input = { left:false, right:false, pointer:false };
+
+  function onKey(e, down){
+    if(['ArrowLeft','a','A','ArrowRight','d','D'].includes(e.key)){
+      e.preventDefault();
+      if(e.key==='ArrowLeft' || e.key==='a' || e.key==='A') input.left  = down;
+      if(e.key==='ArrowRight'|| e.key==='d' || e.key==='D') input.right = down;
+    }
+  }
+  window.addEventListener('keydown', e=>onKey(e,true),  {passive:false});
+  window.addEventListener('keyup',   e=>onKey(e,false), {passive:false});
+
+  function setPointer(dir){
+    input.pointer = dir !== 0;
+    input.left  = dir < 0;
+    input.right = dir > 0;
+  }
+
+  cvs.addEventListener('pointerdown', e=>{
+    try{ cvs.setPointerCapture(e.pointerId); }catch{}
+    const mid = cvs.getBoundingClientRect().left + cvs.getBoundingClientRect().width/2;
+    setPointer(e.clientX < mid ? -1 : 1);
+  }, {passive:true});
+
+  cvs.addEventListener('pointermove', e=>{
+    if(!input.pointer) return;
+    const mid = cvs.getBoundingClientRect().left + cvs.getBoundingClientRect().width/2;
+    setPointer(e.clientX < mid ? -1 : 1);
+  }, {passive:true});
+
+  function endPointer(e){
+    input.pointer=false; input.left=false; input.right=false;
+    try{ cvs.releasePointerCapture(e.pointerId); }catch{}
+  }
+  cvs.addEventListener('pointerup', endPointer, {passive:true});
+  cvs.addEventListener('pointercancel', endPointer, {passive:true});
+
+  // ---- Update & Draw ----
+  function step(dt){
+    t += dt;
+    // player angular velocity from input
+    const want = (input.left?-1:0) + (input.right?1:0);
+    player.vtheta = want * player.speed;
+    player.theta = norm(player.theta + player.vtheta * dt);
+
+    // move arcs and check collision
+    for(const a of arcs){
+      a.a = norm(a.a + a.dir * a.w * dt);
+      if(arcHitsPlayer(a, player.r, player.theta)){
+        gameOver();
+        return;
+      }
+    }
+
+    // scoring (time-based)
+    score += dt * 60 * 0.6;             // ~36 pts / second
+    earned = Math.floor(score / 30) * 2; // +2 chads per 30 score (tweakable)
+    updateHeader();
+  }
+
   function draw(){
+    // bg
     ctx.clearRect(0,0,W,H);
-    const cx=W/2, cy=H/2, R=Math.min(W,H)/2*0.92;
-    const g=ctx.createRadialGradient(cx,cy,0,cx,cy,R); g.addColorStop(0,'#0b1223'); g.addColorStop(1,'#06090f'); ctx.fillStyle=g; ctx.fillRect(0,0,W,H);
-    ctx.save(); ctx.translate(cx,cy); ctx.scale(R,R);
+    const g = ctx.createRadialGradient(cx,cy, Math.min(W,H)*0.05, cx,cy, Math.min(W,H)*0.6);
+    g.addColorStop(0,'#0b1223');
+    g.addColorStop(1,'#06090f');
+    ctx.fillStyle = g;
+    ctx.fillRect(0,0,W,H);
+
+    ctx.save();
+    ctx.translate(cx, cy);
+
     // arcs
-    ctx.strokeStyle='#4a82ff'; ctx.lineCap='round';
-    arcs.forEach(a=>{ ctx.lineWidth=a.thick; ctx.beginPath(); ctx.arc(0,0,a.rad+a.thick/2, a.off, a.off + a.len); ctx.stroke(); });
-    // player
-    const ang=player.ang, pr=player.rad; const px=Math.cos(ang)*pr, py=Math.sin(ang)*pr;
-    ctx.fillStyle='#f5c24b'; ctx.beginPath(); ctx.moveTo(px,py); ctx.lineTo(px-0.03,py+0.02); ctx.lineTo(px-0.03,py-0.02); ctx.closePath(); ctx.fill();
+    ctx.strokeStyle = '#4aa3ff';
+    ctx.lineCap = 'round';
+    arcs.forEach(a=>{
+      ctx.lineWidth = a.thick;
+      ctx.beginPath();
+      ctx.arc(0,0, a.r, a.a - a.span*0.5, a.a + a.span*0.5, false);
+      ctx.stroke();
+    });
+
+    // player (small triangle)
+    const pr = player.r, ang = player.theta;
+    const px = Math.cos(ang)*pr, py = Math.sin(ang)*pr;
+    ctx.fillStyle = '#ffc64b';
+    ctx.beginPath();
+    ctx.moveTo(px, py);
+    // two back points
+    const backAng = ang + Math.PI*0.85;
+    const b1x = px + Math.cos(backAng - 0.25)*player.rad*1.2;
+    const b1y = py + Math.sin(backAng - 0.25)*player.rad*1.2;
+    const b2x = px + Math.cos(backAng + 0.25)*player.rad*1.2;
+    const b2y = py + Math.sin(backAng + 0.25)*player.rad*1.2;
+    ctx.lineTo(b1x,b1y); ctx.lineTo(b2x,b2y); ctx.closePath(); ctx.fill();
+
     ctx.restore();
   }
-  function frame(ts){ if(!running) return; const prev=frame._p||ts; let dt=(ts-prev)/1000; frame._p=ts; dt=Math.min(0.033,dt); if(!paused){ update(dt); draw(); } loop=requestAnimationFrame(frame); }
-  function start(){ reset(); running=true; paused=false; frame._p=performance.now(); loop=requestAnimationFrame(frame); document.getElementById('vortexPause').textContent='Pause'; }
-  function stop(){ running=false; if(loop) cancelAnimationFrame(loop); loop=null; }
 
-  // input
-  function turn(dir){ player.ang += dir*player.spd*0.016; }
-  window.addEventListener('keydown', (e)=>{ if(!running) return; if(e.key==='ArrowLeft'||e.key==='a'){ e.preventDefault(); player.ang -= player.spd*0.07; } if(e.key==='ArrowRight'||e.key==='d'){ e.preventDefault(); player.ang += player.spd*0.07; } }, {passive:false});
-  cvs.addEventListener('pointerdown', (e)=>{ const mid=cvs.getBoundingClientRect().left + cvs.getBoundingClientRect().width/2; turn( e.clientX < mid ? -1 : +1 ); });
+  // ---- Loop ----
+  function frame(ts){
+    if(!running){ loopId=null; return; }
+    const prev = lastTs || ts;
+    lastTs = ts;
+    const dt = Math.min(0.033, Math.max(0, (ts - prev)/1000)); // clamp ~30 FPS min
+    if(!paused){ step(dt); draw(); }
+    loopId = requestAnimationFrame(frame);
+  }
 
-  function gameOver(){ stop(); showToast(`You hit a wall! Score ${score}. Press Quit to collect.`); }
-  document.getElementById('vortexStart').onclick=()=> start();
-  document.getElementById('vortexPause').onclick=()=>{ if(!running) return; paused=!paused; document.getElementById('vortexPause').textContent=paused?'Resume':'Pause'; };
-  document.getElementById('vortexQuit').onclick=()=>{ if(earned>0){ state.chads += BigInt(earned); saveStateLocal(state); refreshUI(); showToast(`<span class="accent">+${earned}</span> chads added.`); } stop(); closeOverlay('vortexModal'); };
-  window.openVortex = ()=>{ closeOverlay('playOverlay'); openOverlay('vortexModal'); start(); };
+  // ---- Controls ----
+  function start(){
+    reset();
+    running = true;
+    paused = false;
+    lastTs = performance.now();
+    pauseBtn.textContent = 'Pause';
+    if(!loopId) loopId = requestAnimationFrame(frame);
+  }
+  function togglePause(){
+    if(!running) return;
+    paused = !paused;
+    pauseBtn.textContent = paused ? 'Resume' : 'Pause';
+  }
+  function quit(){
+    if(!running) return;
+    running = false;
+    if(loopId){ cancelAnimationFrame(loopId); loopId=null; }
+    // pay out
+    const pay = Math.max(0, Math.floor(earned));
+    if (pay>0){
+      state.chads = (state.chads ?? 0n) + BigInt(pay);
+      refreshUI?.(); saveStateLocal?.(state);
+      showToast?.(`<span class="accent">+${pay}</span> chads added to balance.`);
+    }
+    // leave canvas in last frame
+  }
+
+  startBtn.onclick = start;
+  pauseBtn.onclick = togglePause;
+  quitBtn.onclick  = quit;
+
+  // ---- Resize handling ----
+  const ro = new ResizeObserver(()=>{ if(!running) reset(); else { fitCanvasToBox(); W=cvs.width/(window.devicePixelRatio||1); H=cvs.height/(window.devicePixelRatio||1); cx=W/2; cy=H/2; }});
+  ro.observe(cvs);
+
+  // initial fit (so it isn't tiny)
+  reset();
 })();
 
 /* ===== Vertical Jumper (fixed & working) ===== */
